--- a/4seasons/sass/media.sass
+++ b/4seasons/sass/media.sass
@@ -292,8 +292,12 @@ $main_brown-hover: #ac8a48
             margin-top: 20px
 
     .popup
+        &__head
+            padding: 44px 0px 24px
         &__body
             padding: 30px
+        &__input
+            padding: 8px 15px
         &__label
             &-text
                 font-size: 16px
