--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -22,6 +22,8 @@ body
 
 section
     position: relative
+    &:not(.about)
+        overflow: hidden
 
 .section
     &__title
@@ -649,7 +651,6 @@ section
     opacity: 0
     visibility: hidden
     pointer-events: none
-    overflow-y: auto
     &.active
         position: relative
         transform: translateY(0px)
@@ -748,8 +749,9 @@ section
         pointer-events: none
         opacity: 0
         visibility: hidden
+        overflow: hidden
         overflow-y: auto
-        padding: 10px
+        padding: 0px 10px
         &.active
             z-index: 100
             pointer-events: all
