--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -749,6 +749,7 @@ section
         pointer-events: none
         opacity: 0
         visibility: hidden
+        padding-top: 70px
         overflow: hidden
         overflow-y: auto
         padding: 0px 10px
