--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -749,10 +749,9 @@ section
         pointer-events: none
         opacity: 0
         visibility: hidden
-        padding-top: 70px
         overflow: hidden
         overflow-y: auto
-        padding: 0px 10px
+        padding: 70px 10px 0px
         &.active
             z-index: 100
             pointer-events: all
