--- a/4seasons/sass/media.sass
+++ b/4seasons/sass/media.sass
@@ -437,9 +437,9 @@ $main_brown-hover: #ac8a48
             line-height: 24px
 
 @media screen and (max-height: 700px)
-    .popup
-        margin-top: 70px
+    .popup__overlay
+        padding-top: 70px
 
 @media screen and (max-width: 340px)
-    .popup
-        margin-top: 180px
+    .popup__overlay
+        padding-top: 180px
