--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -1099,6 +1099,11 @@ a.text
     overflow-y: auto
     max-height: 95%
     transition: $transition
+    &_video
+        height: 0
+        position: relative
+        padding-bottom: 40%
+        max-width: 1400px
     &_table
         max-width: 1200px
     &__body
