--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -738,6 +738,7 @@ a.text
 
 .slider
     padding-top: 60px
+    overflow: hidden
     .swiper-lazy-preloader-red
         --swiper-preloader-color: #D6253F
     &_last
@@ -757,6 +758,12 @@ a.text
     &__item
         width: 100%
         min-height: 300px
+        max-height: 940px
+        overflow: hidden
+    &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
     &__control
         position: relative
         height: 100px
@@ -837,16 +844,7 @@ a.text
                 width: 8px
                 background-color: #ffffff
                 box-shadow: 0 0 0 4px $main_red
-    &__img
-        height: inherit
-        width: 100%
-        min-height: 300px
-        display: block
-        overflow: hidden
-        img
-            width: 100%
-            height: auto
-            object-fit: cover
+    
 
 .sooc
     padding-top: 50px
