--- a/onlyfans/sass/style.sass
+++ b/onlyfans/sass/style.sass
@@ -55,7 +55,6 @@ section
     position: relative
     cursor: pointer
     text-decoration: none
-    text-transform: uppercase
     text-align: center
     user-select: none
     color: $text-black
@@ -64,6 +63,15 @@ section
     vertical-align: middle
     white-space: nowrap
     transition: $transition
+    color: #ffffff
+    &_pink
+        background-color: #EA0774
+        &:hover
+            background-color: #f3288a
+    &_blue
+        background-color: #1AB7F1
+        &:hover
+            background-color: #49c3f0
     &:focus
         outline: none
 
@@ -166,6 +174,54 @@ section
         width: 100%
         height: 100%
 
+.about
+    margin: 55px 0px 75px
+    &__wrap
+        display: flex
+    &__slider
+        flex-basis: 44%
+    &__main
+        padding: 60px 0px 80px 50px
+        position: relative
+        z-index: 2
+        flex-grow: 1
+        &::before
+            border-radius: 20px 0px 0px 20px
+            z-index: -1
+            content: ''
+            display: block
+            width: 100%
+            height: 100%
+            left: 0
+            top: 0
+            position: absolute
+            background-color: #fcf3ff
+    &__content
+        max-width: 480px
+    &__title
+        font-size: 64px
+        line-height: 150%
+        font-weight: 700
+    &__subtitle
+        font-size: 20px
+        line-height: 150%
+    &__text
+        margin-top: 1em
+        font-weight: 300
+        &_medium
+            font-weight: 500
+
+.slider
+    &__top
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-bottom: 45px
+    &__title
+        font-size: 24px
+        line-height: 24px
+        font-weight: 700
+
 .prices
     padding-bottom: 60px
     &__wrap
@@ -174,7 +230,7 @@ section
         justify-content: space-around
 
 .tariff
-    flex-basis: 24%
+    flex-basis: 20.5%
     box-shadow: 0px 4px 4px rgba(152, 149, 149, 0.25)
     background-color: #fff
     display: flex
@@ -185,7 +241,7 @@ section
         font-weight: 700
         text-align: center
         font-size: 36px
-        text-align: center
+        text-transform: uppercase
         margin-bottom: 10px
     &__description
         font-size: 14px
@@ -196,7 +252,7 @@ section
         margin-bottom: 25px
     &__list
         list-style-type: none
-        margin-bottom: 30px
+        margin-bottom: 50px
     &__item
         position: relative
         font-weight: 700
@@ -215,6 +271,12 @@ section
             background-color: #CBD5E0
         & + &
             margin-top: 15px
+    &__button
+        margin-top: auto
+        font-weight: 700
+        font-size: 16px
+        width: 100%
+        padding: 24px 0px 22px
 
 .footer
     padding-bottom: 15px
