--- a/onlyfans/sass/style.sass
+++ b/onlyfans/sass/style.sass
@@ -407,6 +407,7 @@ section
             &:hover
                 background-color: rgba(0, 0, 0, .1)
             svg
+                position: absolute
                 top: 50%
                 left: 50%
                 transform: translate(-50%, -50%)
