--- a/onlyfans/sass/style.sass
+++ b/onlyfans/sass/style.sass
@@ -32,6 +32,9 @@ body
     display: flex
     flex-direction: column
 
+.body-bg
+    background-color: #fafeff
+
 section
     position: relative
 
