--- a/onlyfans/sass/style.sass
+++ b/onlyfans/sass/style.sass
@@ -176,15 +176,21 @@ section
             transform: scaleX(1)
 
 .telegram
-    margin-left: 30px
     max-width: 124px
     width: 100%
     height: auto
+    display: block
+    flex-shrink: 0
+    flex-grow: 0
+    &_header
+        margin-left: 30px
     &_footer
         margin: 0px 0px 15px
+    &_pricelist
+        margin-top: 65px
     &__img
         width: 100%
-        height: 100%
+        height: auto
 
 .filter
     margin-top: 59px
@@ -270,6 +276,7 @@ section
                 left: 50%
                 transform: translate(-50%, -50%) rotate(90deg)
                 stroke: $search-ico-color
+                pointer-events: none
 
 .about
     margin: 40px 0px 75px
@@ -526,3 +533,64 @@ section
         bottom: 0
         left: 0
         background-color: #1976D2
+
+
+//
+//
+// - Страница модели
+//
+//
+
+.model
+    &__wrap, &__priselist
+        display: flex
+    &__priselist
+        flex-direction: column
+        align-items: flex-start
+        width: 230px
+        margin-top: 25px
+        flex-shrink: 0
+        .tariff
+            flex-basis: auto
+            width: 100%
+            margin-bottom: 20px
+            box-shadow: 0px 4px 10px 4px rgba(152,149,149,0.1)
+            align-items: flex-start
+            padding: 15px 0px 15px 10px
+            &:last-of-type
+                margin-bottom: 0
+            &__head
+                justify-content: space-between
+                margin-bottom: 10px
+                .button
+                    display: inline-block
+            &__name
+                font-size: 24px
+                line-height: 24px
+            &__description, &__list
+                padding-right: 10px
+                text-align: left
+            &__description
+                margin-bottom: 13px
+            &__list
+                padding-left: 20px
+                margin-bottom: 0
+            &__button
+                text-transform: uppercase
+                font-size: 12px
+                font-weight: 700
+                padding: 10px
+                width: auto
+                max-width: none
+            &__button
+                padding: 10px
+            &__head
+                justify-content: space-between
+                .button
+                    display: inline-block
+            & > .button
+                display: none
+    &__main
+        margin-left: 30px
+        flex-grow: 1
+    &__head
