--- a/onlyfans/sass/media.sass
+++ b/onlyfans/sass/media.sass
@@ -175,11 +175,11 @@ $search-ico-color: #BD0CFF
 @media screen and ( max-width: 500px )
     .header
         .telegram
-            width: 38px
-            overflow: hidden
+            &__text
+                display: none
             &__img
                 height: 36px
-                width: auto
+                width: 36px
 
     .prices .tariff
         flex-basis: 80%
