--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -442,6 +442,7 @@ section
         &-rub
             color: #000
             font-weight: 500
+            font-size: 42px
     &__row
         display: flex
         align-items: center
